welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:11: error: illegal start of statement
)
^Program:13: error: ')' expected but ';' found.
	droite();
                ^